Improving readability and some small fixes.

--- a/assets/sass/reset.scss
+++ b/assets/sass/reset.scss
@@ -1,7 +1,6 @@
 html,
 body {
     font-family: "Roboto", sans-serif;
-    font-size: 88%;
 }
 
 body {
